feat:add carousel

--- a/Business_Card/src/shared/lib/helper/data/projects.json
+++ b/Business_Card/src/shared/lib/helper/data/projects.json
@@ -143,8 +143,8 @@
     "OldBusinessSite": {
         "name": "Старый сайт-визитка",
         "description": [
-            "Мой первый сайт визитка",
-            "Написан без использования react и FSD, труден для масштабирования"
+            "Мой первый сайт визитка.",
+            "Написан без использования react и FSD, труден для масштабирования."
         ],
         "parameters": [],
         "preview": [
