--- a/Business_Card/src/shared/lib/helper/data/projects.json
+++ b/Business_Card/src/shared/lib/helper/data/projects.json
@@ -8,9 +8,9 @@
             "Присутствует непобедимый min-max алгоритм"
         ],
         "preview": [
-            "/src/shared/assets/projects/ticTacToe/ticTacToe_scale,w_50.webp",
-            "/src/shared/assets/projects/ticTacToe/ticTacToe_scale,w_905.webp",
-            "/src/shared/assets/projects/ticTacToe/ticTacToe_scale,w_1318.webp"
+            "./src/shared/assets/projects/ticTacToe/ticTacToe_scale,w_50.webp",
+            "./src/shared/assets/projects/ticTacToe/ticTacToe_scale,w_905.webp",
+            "./src/shared/assets/projects/ticTacToe/ticTacToe_scale,w_1318.webp"
         ],
         "link": "https://implobserver.github.io/TicTacToe/",
         "repository": "https://github.com/implObserver/TicTacToe"
@@ -24,9 +24,9 @@
             "Формат классический, русский"
         ],
         "preview": [
-            "/src/shared/assets/projects/battleShip/battleShip_znkt60_c_scale,w_50.webp",
-            "/src/shared/assets/projects/battleShip/battleShip_znkt60_c_scale,w_750.webp",
-            "/src/shared/assets/projects/battleShip/battleShip_znkt60_c_scale,w_1318.webp"
+            "./src/shared/assets/projects/battleShip/battleShip_znkt60_c_scale,w_50.webp",
+            "./src/shared/assets/projects/battleShip/battleShip_znkt60_c_scale,w_750.webp",
+            "./src/shared/assets/projects/battleShip/battleShip_znkt60_c_scale,w_1318.webp"
         ],
         "link": "https://implobserver.github.io/BattleShip/",
         "repository": "https://github.com/implObserver/BattleShip"
@@ -39,9 +39,9 @@
         ],
         "parameters": [],
         "preview": [
-            "/src/shared/assets/projects/knightTravelers/knightTravelers_ipiv1f_c_scale,w_50.webp",
-            "/src/shared/assets/projects/knightTravelers/knightTravelers_ipiv1f_c_scale,w_727.webp",
-            "/src/shared/assets/projects/knightTravelers/knightTravelers_ipiv1f_c_scale,w_1318.webp"
+            "./src/shared/assets/projects/knightTravelers/knightTravelers_ipiv1f_c_scale,w_50.webp",
+            "./src/shared/assets/projects/knightTravelers/knightTravelers_ipiv1f_c_scale,w_727.webp",
+            "./src/shared/assets/projects/knightTravelers/knightTravelers_ipiv1f_c_scale,w_1318.webp"
         ],
         "link": "https://implobserver.github.io/KnightsTravails/",
         "repository": "https://github.com/implObserver/KnightsTravails"
@@ -54,9 +54,9 @@
         ],
         "parameters": [],
         "preview": [
-            "/src/shared/assets/projects/TODO-Manager/TODO-Manager_lj0ive_c_scale,w_50.webp",
-            "/src/shared/assets/projects/TODO-Manager/TODO-Manager_lj0ive_c_scale,w_1160.webp",
-            "/src/shared/assets/projects/TODO-Manager/TODO-Manager_lj0ive_c_scale,w_1318.webp"
+            "./src/shared/assets/projects/TODO-Manager/TODO-Manager_lj0ive_c_scale,w_50.webp",
+            "./src/shared/assets/projects/TODO-Manager/TODO-Manager_lj0ive_c_scale,w_1160.webp",
+            "./src/shared/assets/projects/TODO-Manager/TODO-Manager_lj0ive_c_scale,w_1318.webp"
         ],
         "link": "https://implobserver.github.io/TODO-Manager/",
         "repository": "https://github.com/implObserver/TODO-Manager"
@@ -69,9 +69,9 @@
         ],
         "parameters": [],
         "preview": [
-            "/src/shared/assets/projects/WeatherApp/WeatherApp_pqwqwj_c_scale,w_50.webp",
-            "/src/shared/assets/projects/WeatherApp/WeatherApp_pqwqwj_c_scale,w_688.webp",
-            "/src/shared/assets/projects/WeatherApp/WeatherApp_pqwqwj_c_scale,w_1318.webp"
+            "./src/shared/assets/projects/WeatherApp/WeatherApp_pqwqwj_c_scale,w_50.webp",
+            "./src/shared/assets/projects/WeatherApp/WeatherApp_pqwqwj_c_scale,w_688.webp",
+            "./src/shared/assets/projects/WeatherApp/WeatherApp_pqwqwj_c_scale,w_1318.webp"
         ],
         "link": "https://implobserver.github.io/WeatherApp/",
         "repository": "https://github.com/implObserver/WeatherApp"
@@ -83,9 +83,9 @@
         ],
         "parameters": [],
         "preview": [
-            "/src/shared/assets/projects/cvApplication/cvApplication_rvirmq_c_scale,w_50.webp",
-            "/src/shared/assets/projects/cvApplication/cvApplication_rvirmq_c_scale,w_795.webp",
-            "/src/shared/assets/projects/cvApplication/cvApplication_rvirmq_c_scale,w_1223.webp"
+            "./src/shared/assets/projects/cvApplication/cvApplication_rvirmq_c_scale,w_50.webp",
+            "./src/shared/assets/projects/cvApplication/cvApplication_rvirmq_c_scale,w_795.webp",
+            "./src/shared/assets/projects/cvApplication/cvApplication_rvirmq_c_scale,w_1223.webp"
         ],
         "link": "https://cv-applicationstudyproject.netlify.app/",
         "repository": "https://github.com/implObserver/CV-Applications"
@@ -104,9 +104,9 @@
             "1 игрок"
         ],
         "preview": [
-            "/src/shared/assets/projects/memoryCard/memoryCard_uutnw8_c_scale,w_50.webp",
-            "/src/shared/assets/projects/memoryCard/memoryCard_uutnw8_c_scale,w_785.webp",
-            "/src/shared/assets/projects/memoryCard/memoryCard_uutnw8_c_scale,w_1195.webp"
+            "./src/shared/assets/projects/memoryCard/memoryCard_uutnw8_c_scale,w_50.webp",
+            "./src/shared/assets/projects/memoryCard/memoryCard_uutnw8_c_scale,w_785.webp",
+            "./src/shared/assets/projects/memoryCard/memoryCard_uutnw8_c_scale,w_1195.webp"
         ],
         "link": "https://memorycardgamepokemon.netlify.app/",
         "repository": "https://github.com/implObserver/MemoryCard"
@@ -133,9 +133,9 @@
             "onlyhttp Cookies"
         ],
         "preview": [
-            "/src/shared/assets/projects/blogApi/blogApi_oop04s_c_scale,w_50.webp",
-            "/src/shared/assets/projects/blogApi/blogApi_oop04s_c_scale,w_773.webp",
-            "/src/shared/assets/projects/blogApi/blogApi_oop04s_c_scale,w_1237.webp"
+            "./src/shared/assets/projects/blogApi/blogApi_oop04s_c_scale,w_50.webp",
+            "./src/shared/assets/projects/blogApi/blogApi_oop04s_c_scale,w_773.webp",
+            "./src/shared/assets/projects/blogApi/blogApi_oop04s_c_scale,w_1237.webp"
         ],
         "link": "https://blogapifront.netlify.app/",
         "repository": "https://github.com/implObserver/Blog_API_Solutions"
@@ -148,9 +148,9 @@
         ],
         "parameters": [],
         "preview": [
-            "/src/shared/assets/projects/oldBusinessCard/oldBusinessCard_violjy_c_scale,w_50.webp",
-            "/src/shared/assets/projects/oldBusinessCard/oldBusinessCard_violjy_c_scale,w_817.webp",
-            "/src/shared/assets/projects/oldBusinessCard/oldBusinessCard_violjy_c_scale,w_1244.webp"
+            "./src/shared/assets/projects/oldBusinessCard/oldBusinessCard_violjy_c_scale,w_50.webp",
+            "./src/shared/assets/projects/oldBusinessCard/oldBusinessCard_violjy_c_scale,w_817.webp",
+            "./src/shared/assets/projects/oldBusinessCard/oldBusinessCard_violjy_c_scale,w_1244.webp"
         ],
         "link": "https://implobserver.github.io/homepage/",
         "repository": "https://github.com/implObserver/homepage"
